--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,16 @@ h3 {
 .hidden-tablet {
     display: none;
 }
+
+.ad {
+    padding-bottom: 45px;
+}
+
+h5 {
+    font-size: 30px;
+    font-weight: 300;
+    text-transform: uppercase;
+}
 /*----------------
     RESPONSIVE
 ------------------*/
